# QUINIELALIGAMX

./: .gitignore  BETA_1.0_CHECKPOINT.md  Makefile  README.md  SESSION_CHECKPOINT_2026-03-20.md  SESSION_CHECKPOINT_2026-03-21.md  SESSION_CHECKPOINT_2026-03-22.md  SESSION_CHECKPOINT_2026-03-25.md  SESSION_CHECKPOINT_2026-03-26.md
apps/api/: .env.example  Makefile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: __init__.py  main.py
apps/api/ligamx_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/scripts/: 01_GetODDS.py  seed.py
apps/api/sql/: 001_create_ligamx_odds_5d.sql  002_create_users.sql
apps/api/tests/: conftest.py  test_auth.py  test_health.py  test_ligamx.py  test_users.py
backend/: .env.example  README.md  pyproject.toml  railway.json  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  datetime.py  match_keys.py  security.py  team_matching.py
backend/app/data/: quiniela_plus_advanced_stats.json
backend/app/models/: __init__.py  entities.py  quiniela_plus_value.py
backend/app/providers/: api_football_provider.py  base.py  mock_provider.py  results_api_provider.py  the_odds_scores_provider.py
backend/app/repositories/: leaderboard_repository.py  match_repository.py  matchday_repository.py  odds_repository.py  pick_repository.py  profile_repository.py  season_membership_repository.py  season_repository.py  team_repository.py
backend/app/schemas/: admin.py  bootstrap.py  competition.py  dashboard.py  leaderboard.py  match.py  matchday.py  payments.py  pick.py  (+8 more)
backend/quinielamaestra_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: import_history_odds.py  import_results_history.py  pull_odds_raw.py  pull_quiniela_plus_advanced_stats.py  send_pick_reminders.py  sync_odds_from_raw.py
backend/tests/: conftest.py  test_admin_picks.py  test_admin_results.py  test_admin_settings.py  test_api_football_provider.py  test_first_flow.py  test_pick_membership.py  test_quiniela_plus.py  test_reminders.py  test_the_odds_scores_provider.py  test_tie_rankings.py  test_tournament_freeze.py  test_vip.py
(+1018 files in other folders)
