[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quinielamaestra-backend"
version = "0.1.0"
description = "FastAPI backend for QuinielaMaestra"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "sqlalchemy>=2.0.42,<3.0.0",
  "psycopg[binary]>=3.2.9,<4.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "python-jose[cryptography]>=3.5.0,<4.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "httpx>=0.28.1,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1,<9.0.0",
  "ruff>=0.12.9,<1.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

