[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ligamx-api"
version = "0.1.0"
description = "Backend API for LigaMX app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "sqlalchemy>=2.0.42,<3.0.0",
  "alembic>=1.16.4,<2.0.0",
  "psycopg[binary]>=3.2.9,<4.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "python-jose[cryptography]>=3.5.0,<4.0.0",
  "bcrypt>=4.1.3,<5.0.0",
  "python-multipart>=0.0.20,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "black>=25.1.0,<26.0.0",
  "ruff>=0.12.9,<1.0.0",
  "pytest>=8.4.1,<9.0.0",
  "httpx>=0.28.1,<1.0.0",
  "coverage>=7.10.6,<8.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
